[gd_scene load_steps=8 format=2]

[ext_resource path="res://StatsBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://PhoneMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://DialogBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map.tscn" type="PackedScene" id=5]
[ext_resource path="res://Library.tscn" type="PackedScene" id=6]
[ext_resource path="res://Daytime.gd" type="Script" id=7]

[node name="Daytime" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="StatsBox" parent="." instance=ExtResource( 1 )]

[node name="ClockContainer" parent="." instance=ExtResource( 2 )]
margin_top = 197.0
margin_bottom = 287.0

[node name="DialogBox" parent="." instance=ExtResource( 4 )]

[node name="PhoneMenu" parent="." instance=ExtResource( 3 )]
margin_top = 288.0
margin_bottom = 288.0

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="Library" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="queue_finished" from="DialogBox" to="." method="showChoices"]
[connection signal="go_to_location" from="Map" to="." method="_on_Map_go_to_location"]
[connection signal="completed_task" from="Library" to="." method="completedTask"]
[connection signal="gained_energy" from="Library" to="." method="increaseEnergy"]
[connection signal="gained_happiness" from="Library" to="." method="increaseHappiness"]
[connection signal="gained_stress" from="Library" to="." method="increaseStress"]
[connection signal="leave_location" from="Library" to="." method="goToMap"]
[connection signal="lost_energy" from="Library" to="." method="decreaseEnergy"]
[connection signal="lost_happiness" from="Library" to="." method="decreaseHappiness"]
[connection signal="lost_stress" from="Library" to="." method="decreaseStress"]
[connection signal="passed_time" from="Library" to="." method="completedAction"]
[connection signal="queued_dialog" from="Library" to="." method="playChoiceDialog"]
